Electoral roll better

--- a/Electoral data extraction.ipynb
+++ b/Electoral data extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -52,56 +52,68 @@
     "    im = im.resize((3000, 3882), PIL.Image.LANCZOS)\n",
     "    im = cv2.bilateralFilter(np.array(im, dtype= np.uint8),9,75,75)\n",
     "    im = cv2.cvtColor(im, cv2.COLOR_BGR2GRAY)\n",
-    "    im = cv2.adaptiveThreshold(np.array(im,dtype=np.uint8), 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY, 31, 9)\n",
+    "    im = cv2.adaptiveThreshold(np.array(im,dtype=np.uint8), 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY, 31, 15)\n",
     "    im = Image.fromarray(im)\n",
-    "    countt = 1 \n",
-    "    \n",
-    "    for i in range(0,10):\n",
-    "        for j in range(0,3):\n",
-    "            kk = []\n",
-    "            \n",
-    "\n",
-    "            cropped_im_nm = im.crop(crop_rectangle_nm)\n",
-    "            c_nm = image_to_string(cropped_im_nm,config='-c tessedit_char_whitelist=abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM --psm 6')\n",
-    "            details = c_nm.splitlines()\n",
+    "    countt = 1\n",
+    "    jj = []\n",
+    "    cropped_im_n = im.crop(crop_rectangle_nm)\n",
+    "    c_n = image_to_string(cropped_im_n,config='-c tessedit_char_whitelist=abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM --psm 6')\n",
+    "    details = c_n.splitlines()\n",
     "#             print(details)\n",
-    "            for i in details:\n",
-    "                if len(i)>0:\n",
-    "                    if len(i.split(\":\"))>1:\n",
-    "                        kk.append(i)\n",
-    "#             print(kk)\n",
-    "            if len(kk)==4:\n",
-    "                countt+=1\n",
-    "                file_name.append(x+str(countt))\n",
-    "                n = kk[0].strip().split(\":\")[1]\n",
-    "                f = kk[1].strip().split(\":\")[1]\n",
-    "                h = kk[2].strip().split(\":\")[1]\n",
-    "                mm = kk[3].strip().split(\":\")\n",
-    "                a = mm[1].strip().split(\" \")[0]\n",
-    "                g = mm[2].strip()\n",
-    "                gr = kk[1].strip().split(\":\")[0]\n",
-    "                name.append(n)\n",
-    "                father.append(f)\n",
-    "                hno.append(h)\n",
-    "                age.append(a)\n",
-    "                gen.append(g)\n",
-    "                grel.append(gr)\n",
-    "                \n",
-    "            else:\n",
-    "                return image_text_2(im,x)\n",
+    "    for i in details:\n",
+    "        if len(i)>0:\n",
+    "            if len(i.split(\":\"))>1:\n",
+    "                jj.append(i)\n",
+    "    if len(jj)==4:\n",
+    "    \n",
+    "        for i in range(0,10):\n",
+    "            for j in range(0,3):\n",
+    "                kk = []\n",
     "\n",
-    "# Find distance between same category horizontally.\n",
-    "# For example find distance between starting coordinate of first box NAME and starting coordinate of secnd box NAME on right\n",
-    "# Make sure we find distance from starting point. Distance should be same for 2nd and 3rd box horizontally as well as for every 4 other value, such as age, sex etc\n",
-    "            crop_rectangle_nm = tuple(np.add(crop_rectangle_nm, (911, 0,911,0)))\n",
-    "# Find ditance between third and first box. Which should be 3 times above found distance\n",
     "\n",
-    "        crop_rectangle_nm = tuple(np.subtract(crop_rectangle_nm, (2733, 0,2733,0)))\n",
+    "                cropped_im_nm = im.crop(crop_rectangle_nm)\n",
+    "                c_nm = image_to_string(cropped_im_nm,config='-c tessedit_char_whitelist=abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM --psm 6')\n",
+    "                details = c_nm.splitlines()\n",
+    "    #             print(details)\n",
+    "                for i in details:\n",
+    "                    if len(i)>0:\n",
+    "                        if len(i.split(\":\"))>1:\n",
+    "                            kk.append(i)\n",
+    "#                 print(kk)\n",
+    "                if len(kk)==4:\n",
+    "                    countt+=1\n",
+    "                    file_name.append(x+str(countt))\n",
+    "                    n = kk[0].strip().split(\":\")[1]\n",
+    "                    f = kk[1].strip().split(\":\")[1]\n",
+    "                    h = kk[2].strip().split(\":\")[1]\n",
+    "                    mm = kk[3].strip().split(\":\")\n",
+    "                    a = mm[1].strip().split(\" \")[0]\n",
+    "                    g = mm[2].strip()\n",
+    "                    gr = kk[1].strip().split(\":\")[0]\n",
+    "                    name.append(n)\n",
+    "                    father.append(f)\n",
+    "                    hno.append(h)\n",
+    "                    age.append(a)\n",
+    "                    gen.append(g)\n",
+    "                    grel.append(gr)\n",
     "\n",
-    "# Find distance between same category vertically.\n",
-    "# For example find distance between starting coordinate of first box NAME and starting coordinate of secnd box NAME down\n",
-    "# Distance should be same for all 10 boxes vertically as well as for every 4 other value, such as age, sex etc\n",
-    "        crop_rectangle_nm = tuple(np.add(crop_rectangle_nm, (0, 323,0,323)))\n",
+    "\n",
+    "\n",
+    "    # Find distance between same category horizontally.\n",
+    "    # For example find distance between starting coordinate of first box NAME and starting coordinate of secnd box NAME on right\n",
+    "    # Make sure we find distance from starting point. Distance should be same for 2nd and 3rd box horizontally as well as for every 4 other value, such as age, sex etc\n",
+    "                crop_rectangle_nm = tuple(np.add(crop_rectangle_nm, (911, 0,911,0)))\n",
+    "    # Find ditance between third and first box. Which should be 3 times above found distance\n",
+    "\n",
+    "            crop_rectangle_nm = tuple(np.subtract(crop_rectangle_nm, (2733, 0,2733,0)))\n",
+    "\n",
+    "    # Find distance between same category vertically.\n",
+    "    # For example find distance between starting coordinate of first box NAME and starting coordinate of secnd box NAME down\n",
+    "    # Distance should be same for all 10 boxes vertically as well as for every 4 other value, such as age, sex etc\n",
+    "            crop_rectangle_nm = tuple(np.add(crop_rectangle_nm, (0, 323,0,323)))\n",
+    "    \n",
+    "    else:\n",
+    "        return image_text_2(im,x)\n",
     "\n",
     "\n",
     "    return name,father,hno,age,gen,file_name,grel\n",
@@ -110,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +140,7 @@
     "                if len(i)>0:\n",
     "                    if len(i.split(\":\"))>1:\n",
     "                        kk.append(i)\n",
+    "#             print(kk)\n",
     "            if len(kk)==4:\n",
     "                countt+=1\n",
     "                file_name.append(x+str(countt))\n",
@@ -175,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -185,16 +198,16 @@
    "source": [
     "import glob\n",
     "#Getting all page 1\n",
-    "page_1 = glob.glob('C:/Users/SUYASH/Downloads/archive/*-01.jpg')\n",
+    "page_1 = glob.glob('C:/Users/SUYASH/Desktop/1/New folder/*page1.jpg')\n",
     "#Getting all page 2\n",
-    "page_2 = glob.glob('C:/Users/SUYASH/Downloads/archive/*-02.jpg')\n",
+    "page_2 = glob.glob('C:/Users/SUYASH/Desktop/1/New folder/*page2.jpg')\n",
     "#Getting all pages\n",
-    "page_all = glob.glob('C:/Users/SUYASH/Downloads/archive/*.jpg')"
+    "page_all = glob.glob('C:/Users/SUYASH/Desktop/1/New folder/*.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -210,28 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:/Users/SUYASH/Downloads/archive\\\\U05A40P2-03.jpg',\n",
-       " 'C:/Users/SUYASH/Downloads/archive\\\\U05A40P2-11.jpg']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "page_fin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -256,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -271,24 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "3NR71tlKNllK",
     "outputId": "65655505-0db4-416e-8b8e-6f1150ec81a4"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "page_1\n",
-      "page_2\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Count value is the starting value for code to work. If the last file saved before stopping code was '10', count value for running code again should be '11'\n",
     "count = 1\n",
@@ -313,6 +295,22 @@
     "    print(count)\n",
     "    count+=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
